# AI-config

./: .gitignore  LICENSE  README.md  papers.db  setup.sh
paper-database/: .gitignore  README.md  papers.db-shm  pyproject.toml
paper-database/config/: classifier.yaml  topics.yaml  venues.yaml
paper-database/paper_database/: __init__.py  __main__.py  classifier.py  cli.py  config.py  db.py  exporter.py
paper-database/paper_database/fetcher/: __init__.py  base.py  dblp.py  openalex.py  semantic_scholar.py
paper-database/scripts/: cleanup_parse_failed.py
scripts/: setup-paper-database.sh
skills/paper-database/: SKILL.md
skills/paper-survey/: SKILL.md
